--- a/src/pages/Questionnaires.css
+++ b/src/pages/Questionnaires.css
@@ -3,9 +3,12 @@
     flex-direction: column;
     align-items: center;
     height: 100vh; 
+    width: 180vh;
+    margin-top: 105px;
+  
 }
 
 .table {
     margin-top: 100px; 
-    text-align: left;
+    text-align: center;
 }
